--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ jaac = "jaac:cli"
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.2.0"
 mkdocs = "^1.6.0"
+mkdocs-gitbook = "^0.0.1"
 
 [build-system]
 requires = ["poetry-core"]
