adding required permission

--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -10,6 +10,9 @@ on:
         required: true
         type: string
 
+permissions:
+    id-token: write
+
 jobs:
   publish:
     runs-on: ubuntu-latest
