Adding test pypi url

--- a/.github/workflows/test_pypi.yml
+++ b/.github/workflows/test_pypi.yml
@@ -50,3 +50,4 @@ jobs:
         with:
           user: __token__
           password: ${{ env.TOKEN }}
+          repository-url: https://test.pypi.org/legacy/
