--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "jaac"
-version = "0.1.0rc0.1.9"
+version = "0.1.1"
 description = "Job Application Assets Creator"
 authors = ["Jonathan Pelletier <jonathan.pelletier-aafz@thecloudco.ca>"]
 repository = "https://github.com/jonapellet/JAAC"
